# noisy_box_detector

./: .gitignore  __init__.py  algorithm_configs.yaml  core_algorithm.py  data_configs.yaml  main.py  pyproject.toml  random_snapshot_generation.py  rectangle.py  requirements-dev.txt  requirements.txt  run_experiment.py  setup.py  signal_configs.yaml  spectogram.py
core/: __init__.py  core_algorithm.py  rectangle.py
signal_generation/: __init__.py  snapshot.py
signal_generation/modulation/: ask.py  base.py  fsk.py  psk.py  qam.py
signal_generation/utils/: config.py  parameters.py  visualization.py
tests/: conftest.py  test_core_algorithm.py  test_modulation.py  test_parameters.py  test_rectangle.py  test_snapshot.py  test_spectogram.py  test_utils.py
