[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rectangle_finder"
version = "0.1"
description = "A package for finding and manipulating rectangles in images"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "pydantic",
    "pyyaml",
    "opencv-python",
    "scipy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rectangle_finder" 